Gini related changes

--- a/SDM_paper_draft.Rmd
+++ b/SDM_paper_draft.Rmd
@@ -12,14 +12,14 @@ output:
       keep_tex: yes
       number_sections: no      
       toc: no
-bibliography: D:/NAS/Zotero/MAR_SABHU.bib
-csl: D:/NAS/Zotero/styles/canadian-journal-of-fisheries-and-aquatic-sciences.csl
+bibliography: Y:/Zotero/MAR_SABHU.bib
+csl: Y:/Zotero/styles/canadian-journal-of-fisheries-and-aquatic-sciences.csl
 title: Seasonal and Long term variability in species distribution of Atlantic cod (*Gadus morhua*) and Yellowtail Flounder (*Limanda ferruginea*) on Georges Bank
 author: Keith D.M.^a,b^,  Sameoto J.A.^a^, Keyser F.M.^a^, Andrushchenko I.^a^
 date:  ^a^ Fisheries and Oceans Canada 
        ^b^ Dalhousie University 
        
-abstract: Sustainably managing marine fisheries has long been recognized as a global priority which has proven difficult to achieve.  The reasons sustainable fisheries management goals have not been achieved include various socio-economic, political, and scientific factors.  Scientifically, one of the major challenges has been understanding how environmental factors influence both the spatial and temporal dynamics of a stock. Fisheries science has spent a great deal of effort collecting data, both biological and environmental, which are inherently spatial and temporal in nature. Computational and statistical limitations have resulted in science products which do not fully utilize the spatio-temporal information contained in these data and tend to treat a stock as a homogeneous entities.  Fortunately, computational advances coupled with more accessible statistical methods has resulted in new methodologies which can harness the spatio-temporal information contained in these fisheries data.  Here we develop temporally variable species distribution models for yellowtail flounder (*Limanda ferruginea*) and Atlantic cod (*Gadus morhua*) on Georges Bank (GB) using a suite of static environmental covariates and presence-absence information from groundfish trawl surveys in Canada and the United States.  These models indicate there are both seasonal and long term shifts in the distribution of both species.  The average sea surface temperature (SST; average from 1997-2008) and depth were significant predictors of the distribution of both species throughout the year.  Significant shifts in the distribution of both species occurs relatively frequently, with the distribution of cod observed to differ approximately every 5 years, while the Yellowtail distribution appears to fluctuate every 3 years. These shifts in distribution are not random, with the center of gravity of the core areas for both species shifting to the north and east throughout the study period.  Much of this shift is due to the loss of the species from southern and western portions of GB.  Models for both species were also relatively successful at capturing the spatial dynamics of the stock up to 3 years into the future. The seasonal distribution of cod and yellowtail are relatively consistent throughout the late winter and spring. In the fall the distribution of cod shifts towards the edge of the bank. Shifts in the distribution of the species during spawning has resulted in an increase in the proportion of both species in Canadian waters.  For cod there has been a substainal decline in encounter probability during spawning in the two large closures in the United States, while yellowtail are now predominately found straddling the Canada-U.S. border during spawning with Closed Area II in the U.S. containing almost half of the area with a high probabilty of encounter in recent years.  Here we show how these models are able to provide novel insights into both seasonal and inter-annual variability in species distributions and identify environmental covariates which have a relationship with the distribution of these species. Incorporation of these kinds of information into science advice will improve our ability to sustainably manage these stocks.  
+abstract: Sustainably managing marine fisheries has long been recognized as a global priority which has proven difficult to achieve.  The reasons sustainable fisheries management goals have not been achieved include various socio-economic, political, and scientific factors.  Scientifically, one of the major challenges has been understanding how environmental factors influence both the spatial and temporal dynamics of a stock. Fisheries science has spent a great deal of effort collecting data, both biological and environmental, which are inherently spatial and temporal in nature. Computational and statistical limitations have resulted in science products which do not fully utilize the spatio-temporal information contained in these data and tend to treat a stock as a homogeneous entities.  Fortunately, computational advances coupled with more accessible statistical methods has resulted in new methodologies which can harness the spatio-temporal information contained in these fisheries data.  Here we develop temporally variable species distribution models for yellowtail flounder (*Limanda ferruginea*) and Atlantic cod (*Gadus morhua*) on Georges Bank (GB) using a suite of static environmental covariates and presence-absence information from groundfish trawl surveys in Canada and the United States.  These models indicate there are both seasonal and long term shifts in the distribution of both species.  The average sea surface temperature (SST; average from 1997-2008) and depth were significant predictors of the distribution of both species throughout the year.  Significant shifts in the distribution of both species occurs relatively frequently, with the distribution of cod observed to differ approximately every 5 years, while the Yellowtail distribution appears to fluctuate at least every 3 years. The core areas for both species shifts to the north and east throughout the study period.  Much of this shift is due to the loss of the species from southern and western portions of GB.  Models for both species were also relatively successful at capturing the spatial dynamics of the stock up to 3 years into the future. The seasonal distribution of cod and yellowtail are relatively consistent throughout the late winter and spring, while in the fall the distribution of cod shifts towards the edge of the bank. For cod there has been a substainal decline in core area within the United States waters on Georges Bank while there has been little change in Canadian waters.  In U.S. waters the yellowtail core area declined rapidly in the late 1970s and early 1980s, but rebounded rapidly in the 1990s and early 2000s, while the core area was unchanged or slowly increased in Canadian waters over this time.  These trends have resulted in an increase in the proportion of both stocks in Canadian waters over time.  Here we show how these models are able to provide novel insights into both seasonal and inter-annual variability in species distributions and identify environmental covariates which have a relationship with the distribution of these species. Incorporation of these kinds of information into science advice will improve our ability to sustainably manage these stocks.  
 
 ---
 
@@ -79,6 +79,8 @@ load(paste0(direct.proj,"data/Prediction_mesh.RData"))
 load(paste0(direct.proj,"data/All_model_covariate_fits.RData"))
 load(paste0(direct.proj,"data/INLA_5_fold_cross_valiation_pred_error_and_residual.RData"))
 load(paste0(direct.proj,"data/INLA_2017_2019_prediction_error_summary.RData"))
+load(paste0(direct.proj,"Results/Gini_results.RData"))
+
 # The meta data 
 table_1 <- read_xlsx(paste0(direct.proj,"Data/enviro_data_table.xlsx"))
 # This contains all the WAIC and DIC model selection diagnostics + some plots of these, see Step 6b for what was done here.
@@ -756,7 +758,28 @@ save_plot(paste0(direct.proj,"Results/Figures/prediction_2017_2019.tiff"),plt.pr
 save_plot(paste0(direct.proj,"Results/Figures/prediction_2017_2019.png"),plt.pred.17.19,base_width =12,base_height =8,units='in')
 pred.17.19.plt <- paste0(direct.proj,"Results/Figures/prediction_2017_2019.png")
 
+################################
+#### Gini Figures
+#################################
 
+gini.surveys$species[gini.surveys$species == "Yellowtail Flounder"] <- "Yellowtail"
+gini.surveys$species[gini.surveys$species == "Atlantic Cod"] <- "Cod"
+
+# Now the two figures, I don't think we need this first one for the paper, but is handy I think...
+plt.gini.cum.prop <- ggplot(gini.surveys) + geom_line(aes(x = cum.p.area, y = cum.pbm, color = year,group = year)) + facet_wrap(~species+survey) + 
+  geom_abline(slope=1,intercept =0) + xlim(c(0,1)) + ylim(c(0,1)) + 
+  ylab("Cumlative Proportion of Biomass") + xlab("Cumulative Area")  + scale_color_viridis_c(option = "A")
+
+save_plot(paste0(direct.proj,"Results/Figures/Gini_cum_prop_figures.tiff"),plt.gini.cum.prop,base_width =12,base_height =12,units='in')
+save_plot(paste0(direct.proj,"Results/Figures/Gini_cum_prop_figures.png"),plt.gini.cum.prop,base_width =12,base_height =12,units='in')
+gini.cum.prop.plt <- paste0(direct.proj,"Results/Figures/Gini_cum_prop_figures.png")
+
+plt.gini.index <- ggplot(gini.surveys) + geom_line(aes(x = year, y = Gini,color=species))  + theme(legend.title = element_blank()) +
+  facet_wrap(~survey) + ylim(c(0,1)) + xlab("") + ylab("Gini Index") + scale_color_manual(values = c("forestgreen","black"))
+
+save_plot(paste0(direct.proj,"Results/Figures/Gini_index.tiff"),plt.gini.index,base_width =12,base_height =6,units='in')
+save_plot(paste0(direct.proj,"Results/Figures/Gini_index.png"),plt.gini.index,base_width =12,base_height =6,units='in')
+gini.index.plt <- paste0(direct.proj,"Results/Figures/Gini_index.png")
 
 ################################
 ###  Getting data for use in the paper  ###
@@ -860,7 +883,7 @@ Historically, GB was home to large groundfish fisheries including Atlantic cod (
 
 Fisheries management bodies in both Canada and the United States have implemented measures to protect cod and yellowtail on GB.  While these measures vary between the countries, both countries have collaborated to develop a shared bycatch quota for these two species; this quota has declined substantially for both species over the last decade [@andrushchenkoAssessmentEasternGeorges2018; @legaultStockAssessmentGeorges2018]. In addition to these regulations which attempt to directly limit the removals of these two species, both countries have implemented closures. In the United States two large closed area were implemented (Closed Area I and 2) in 1994, these closures were designed to aid in the recovery of groundfish and invertebrate stocks on GB [@linkEffectsAreaClosures2005; @murawskiLargescaleClosedAreas2000].  In Canada the groundfish fishery is not permitted to fish on GB during cod spawning; since 2010 this closure has started in the 5^th^ week of the year and lasts until May 31^st^.  The Canadian Offshore Scallop Fishery (COSF) also faces restrictions on fishing during the peak spawning periods with time-area closures limiting the area this fishery can operate in February and March (cod; @dfoScallopFisheryArea2019) and June [yellowtail; @dfoScallopFisheryArea2014].
 
-Here we use a recently developed statistical framework (CITE R-INLA) to develop spatio-temporal species distribution models for two depleted groundfish stocks on GB (Atlantic cod and Yellowtail flounder).  Our objectives were; 1) Use a suite of static environmental layers to determine whether any of these environmental data informed the distribution of either species, 2) determine whether the species distributions changed over time and if so how rapidly changes in the distributions could be observed, 3) determine whether the species distributions change seasonally using data from groundfish surveys in the winter, spring, and fall, 4) using these two species as a case study investigate how well existing closures on GB align with these species during spawning and 5) quantify how well the models can predict the spawning distribution of these species 1, 2, and 3 years into the future.
+Here we use a recently developed statistical framework (CITE R-INLA) to develop spatio-temporal species distribution models for two depleted groundfish stocks on GB (Atlantic cod and Yellowtail flounder).  Our objectives were; 1) Use a suite of static environmental layers to determine whether any of these environmental data informed the distribution of either species, 2) determine whether the species distributions changed over time and if so how rapidly changes in the distributions could be observed, 3) determine whether the species distributions change seasonally using data from groundfish surveys in the winter, spring, and fall, 4) quantify the changes in core area within Canada, the U.S. and in the two largest closed areas on Georges Bank.
 
 
 <!-- From a scientific perspective, disentangling how environmental, ecological, and anthropogenic factors impact the population dynamics of marine fishes is pivotal to development of sustainability strategies.  -->
@@ -942,15 +965,18 @@ The yellowtail shift in distribution has in large part been due to a loss of HEP
 
 The 5-fold cross validation indicated that all of the models were able to predict the distribution for all species and surveys without a significant loss of accuracy, the mean error of the residuals for the validation training set predictions were similar to the error from the predicted test data, although the mean error of the test data were generally more variable ((Figure \@ref(fig:folds)).  The RMSE from the test and training data showed similar patterns for both species and most of the models, although notably the RMSE from the intercept only Yellowtail model was somewhat lower than either of the models with covariates indicating that the the inclusion of explicit covariates may result in a small loss of out of sample prediction for this species ((Figure \@ref(fig:folds)).
 
-### Case Study
 
 The 3 and 5 year random field models resulted in a loss of accuracy when predicting the spawning distributions of each species 1, 2, and 3 years into the future (Figure \@ref(fig:pred-17-19)), but the predictions were well below the RMSE associated with a model with no predictive ability (dashed line Figure \@ref(fig:pred-17-19)).  For both species the 2018 data consistently had the lowest prediction accuracy with the predictive models tending expect encounters where no individuals were observed. (Figure \@ref(fig:pred-17-19) and Supplement).
 
-In the U.S., the area of high EP during spawning in CA I declined for both species (recall the Winter cod survey began in 1987) with high EP areas approaching 0 for both species starting in 2002 (Figure \@ref(fig:CA1-2)). In the late 1980's and early 1990's CA I had accounted for as much as `r prop.CA1.peak`% of the high EP on GB during spawning.  In CA II the decline in high EP area for cod was similar to that observed in CA I, although a small amount of High EP area within CA II was observed in recent years for cod; at it's peak CA II represented over `r prop.CA2.peak.cod`% of the high EP on GB. The area of high EP for yellowtail on CA II declined rapidly during the 1970's and 1980's, but has since rebounded and the total high EP area was similar to that observed during the early 1970's in the 2012-2016 era. The proportion of high EP area for yellowtail within CA II during spawning ranged from `r prop.CA2.yt.peak.70s`% of the bank during the 1970s and early 1980s, decline dramatically for the next decade, and since this closure was put in place in the early 1990's the area of high EP has increased substantially and CA II has contained as much as `r prop.CA2.yt.peak`% of all the high EP spawning area for yellowtail on GB (Figure \@ref(fig:CA1-2)).
 
-In Canada, the closures are directed at the COSF and the high EP area for cod during spawning within the COSF domain has generally been in decline with the area of high EP approximately `r cod.area.dec`% lower in the most recent era than at the start of the time series; the proportion of the COSF domain with high EP during spawning has declined from `r cod.prop.dec$max`% to `r cod.prop.dec$min`% during this time (Figure \@ref(fig:scal-fa)).  Despite this decline in area, the proportion of the high EP on GB located within the COSF domain has increased from `r cod.prop.GB$min` % to `r cod.prop.GB$max`% during this time due to the loss of high EP area throughout much of the U.S. portion of GB (Figure \@ref(fig:scal-fa)). The cod closure has included between `r cod.cl.area$min` and `r cod.cl.area$max` km² of high EP since 2007 and over `r cod.cl.prop$min`% of the closure has historically been high EP for cod (Figure \@ref(fig:scal-close)).  Despite this, the small size of this closure resulted in these closures accounting for less than `r cod.cl.prop.GB$max`% of the high EP within the COSF domain.
+<!-- 
+### Case Study
 
-The high EP area of yellowtail during spawning within the COSF domain has increased over time with up to `r yt.tot.area$max` km² and `r yt.prop.GB$max`% of the high EP on GB within this region in recent eras (Figure \@ref(fig:scal-fa)). In the 1970s and 1980s the COSF domain had a little as `r yt.prop.scal$min`% of the high EP, but this changed rapidly in the mid-1990s and since this time at least `r yt.prop.scal.recent$min`% of the COSF domain has been high EP (Figure \@ref(fig:scal-fa)).  The high EP area within the yellowtail closures has ranged between `r yt.cl.area$min` and `r yt.cl.area$max` km² and, with the exception of 2012, at least `r yt.cl.prop$min`% of the closure area has been high EP.  Similar to the cod closures, only a fraction of the total high EP area within the COSF domain is accounted for by the yellowtail closures (Figure \@ref(fig:scal-close)).
+In the U.S., the area of high EP during spawning in CA I declined for both species (recall the Winter cod survey began in 1987) with high EP areas approaching 0 for both species starting in 2002 (Figure \@ref(fig:CA1-2)). In the late 1980's and early 1990's CA I had accounted for as much as `r prop.CA1.peak`% of the high EP on GB during spawning.  In CA II the decline in high EP area for cod was similar to that observed in CA I, although a small amount of High EP area within CA II was observed in recent years for cod; at it's peak CA II represented over `r prop.CA2.peak.cod`% of the high EP on GB. The area of high EP for yellowtail on CA II declined rapidly during the 1970's and 1980's, but has since rebounded and the total high EP area was similar to that observed during the early 1970's in the 2012-2016 era. The proportion of high EP area for yellowtail within CA II during spawning ranged from `r prop.CA2.yt.peak.70s`% of the bank during the 1970s and early 1980s, decline dramatically for the next decade, and since this closure was put in place in the early 1990's the area of high EP has increased substantially and CA II has contained as much as `r prop.CA2.yt.peak`% of all the high EP spawning area for yellowtail on GB (Figure \@ref(fig:CA1-2)). -->
+
+<!-- In Canada, the closures are directed at the COSF and the high EP area for cod during spawning within the COSF domain has generally been in decline with the area of high EP approximately `r cod.area.dec`% lower in the most recent era than at the start of the time series; the proportion of the COSF domain with high EP during spawning has declined from `r cod.prop.dec$max`% to `r cod.prop.dec$min`% during this time (Figure \@ref(fig:scal-fa)).  Despite this decline in area, the proportion of the high EP on GB located within the COSF domain has increased from `r cod.prop.GB$min` % to `r cod.prop.GB$max`% during this time due to the loss of high EP area throughout much of the U.S. portion of GB (Figure \@ref(fig:scal-fa)). The cod closure has included between `r cod.cl.area$min` and `r cod.cl.area$max` km² of high EP since 2007 and over `r cod.cl.prop$min`% of the closure has historically been high EP for cod (Figure \@ref(fig:scal-close)).  Despite this, the small size of this closure resulted in these closures accounting for less than `r cod.cl.prop.GB$max`% of the high EP within the COSF domain. -->
+
+<!-- The high EP area of yellowtail during spawning within the COSF domain has increased over time with up to `r yt.tot.area$max` km² and `r yt.prop.GB$max`% of the high EP on GB within this region in recent eras (Figure \@ref(fig:scal-fa)). In the 1970s and 1980s the COSF domain had a little as `r yt.prop.scal$min`% of the high EP, but this changed rapidly in the mid-1990s and since this time at least `r yt.prop.scal.recent$min`% of the COSF domain has been high EP (Figure \@ref(fig:scal-fa)).  The high EP area within the yellowtail closures has ranged between `r yt.cl.area$min` and `r yt.cl.area$max` km² and, with the exception of 2012, at least `r yt.cl.prop$min`% of the closure area has been high EP.  Similar to the cod closures, only a fraction of the total high EP area within the COSF domain is accounted for by the yellowtail closures (Figure \@ref(fig:scal-close)). -->
 
 # Discussion
 
@@ -1007,6 +1033,13 @@ knitr::include_graphics(over.plt)
 ```{r Mesh, echo=FALSE,out.width="100%",dpi=200,fig.cap = "Delaunay triangular mesh used for the spatial fields mesh. The mesh contains 6610 vertices."}
 # Note that out.width and out.height and dpi don't do anything for word document output in the chunck control above, they wil impact html and pdf output
 knitr::include_graphics(mesh.plt)
+```
+
+
+
+```{r gini-index, echo=FALSE,out.width="100%",dpi=200,fig.cap = "Gini Index "}
+# Note that out.width and out.height and dpi don't do anything for word document output in the chunck control above, they wil impact html and pdf output
+knitr::include_graphics(gini.index.plt)
 ```
 
 ```{r diag-1-fe, echo=FALSE,out.width="100%",dpi=200,fig.cap = "Initial stage of forward model selection using each of the environmental covariates individually.  This model selection was done using a static random field. Blue dashed line represents 2 WAIC units larger than the preferred model, the red dashed line is 10 WAIC units larger than the preferred model WAIC. "}
