--- a/Story_summary.rmd
+++ b/Story_summary.rmd
@@ -11,54 +11,47 @@ output:
 
 1.  Major challenge facing fishery science is accounting for environmental processes both spatially and temporally.
 
-2.  Fisheries science has some amazing data to do this but we haven’t taken full advantage of the data we have due to computational limitations, however new approaches are now available 
+2.  Fisheries science has some amazing data to do this but we haven't taken full advantage of the data we have due to computational limitations, however new approaches are now available
 
-3. We going to show you what we can do using Georges Bank which is super data and biologically rich area with a focus on two formerly valuable stocks (Atl. Cod and Yellowtail).
+3.  We going to show you what we can do using Georges Bank which is super data and biologically rich area with a focus on two formerly valuable stocks (Atl. Cod and Yellowtail).
 
-4.  (Addressing Dan's suggestion) Various indices have been developed which can provide an overview how the spatial distribution of abundance or biomass changes over time (Gini, D50, etc).  These indices generally measure how evenly a population is distributed across some domain with data that is aggregated at some scale (in fisheries often at the scale of the strata). While these indices provide a synoptic view of how a distribution of abundance or biomass has changed over time, they are unable to provide a detailed understanding of the spatial changes in these distributions. (Trying to say they show big picture that the distribution is more or less even, but we don't really know much about the actual pattern past that.)
+4.  (Addressing Dan's suggestion) Various indices have been developed which can provide an overview how the spatial distribution of abundance or biomass changes over time (Gini, D50, etc). These indices generally measure how evenly a population is distributed across some domain with data that is aggregated at some scale (in fisheries often at the scale of the strata). While these indices provide a synoptic view of how a distribution of abundance or biomass has changed over time, they are unable to provide a detailed understanding of the spatial changes in these distributions. (Trying to say they show big picture that the distribution is more or less even, but we don't really know much about the actual pattern past that.)
 
-5.  SDM’s have long been used to develop predictive maps of species distributions.  Problem is they were generally static maps at the start, but recent technological breakthroughs mean we can make more advanced SDM’s that explicitly account for spatial and temporal patterns. 
+5.  SDM's have long been used to develop predictive maps of species distributions. Problem is they were generally static maps at the start, but recent technological breakthroughs mean we can make more advanced SDM's that explicitly account for spatial and temporal patterns.
 
 6.  Our objectives are:
 
-    - Use a suite of static environmental layers to determine whether any of these environmental data informed the distribution of either species
-    - Determine whether the species distributions changed over time and if so how rapidly changes in the distributions could be observed
-    - Determine whether the species distributions change seasonally using data from groundfish surveys in the winter, spring, and fall
-    - Use these models to quantify changes in the core area within Canadian and U.S. waters
+    -   Use a suite of static environmental layers to determine whether any of these environmental data informed the distribution of either species
+    -   Determine whether the species distributions changed over time and if so how rapidly changes in the distributions could be observed
+    -   Determine whether the species distributions change seasonally using data from groundfish surveys in the winter, spring, and fall
+    -   Use these models to quantify changes in the core area within Canadian and U.S. waters
 
 ## Methods
 
-What we've shown with the Closure paper.  I'm also re-running the models again, so we are going to have 3 year predictions 
+What we've shown with the Closure paper.
 
 ## Results
+
 6.  Our results show:
 
-    -   There are both seasonal and long term shifts in the distribution of both species.\
+    -   There are both seasonal and long term shifts in the distribution of both species
+        -   The Gini model results I think show the distributions have changed over time but we can't say much more than that with Gini.
+        -   With our SDM models we can actually observe and quantify the changes
 
-    -   The average sea surface temperature (SST; average from 1997-2008) and depth were significant predictors of the distribution of both species throughout the year.\
+    -   The average sea surface temperature (SST; average from 1997-2008) and depth were significant predictors of the distribution of both species throughout the year.
 
     -   Significant shifts in the distribution of both species occurs relatively frequently, with the distribution of cod observed to differ approximately every 5 years, while the Yellowtail distribution appears to fluctuate every 3 years.
 
     -   These shifts in distribution are not random, with the center of gravity of the core areas for both species shifting to the north and east throughout the study period.
-
         -   Much of this shift is due to the loss of the species from southern and western portions of GB.
 
     -   The seasonal distribution of cod and yellowtail are relatively consistent throughout the late winter and spring.
-
         -   In the fall the distribution of cod shifts towards the edge of the bank.
         -   Shifts in the distribution of the species has resulted in an increase in the proportion of both species in Canadian waters as the likelihood of encountering either species has declined in the southern and western portion of the bank.
 
-    -   During spawning
+    -   The models do a good job predicting the distributions of the species up to 3 years in the future, RMSE of predictions is only slightly larger than RMSE from model residuals.
+        -   Intriguingly, the predictive ability of the models is largely informed by the random fields, predictions using just the random fields and the models with covariates perform very similarly.
 
-        -   For cod there has been a substantial decline in encounter probability in the two large closures in the United States,
-
-        -   Yellowtail are now predominately found straddling the Canada-U.S. border with Closed Area II in the U.S.
-
-        -   Spawning closures facing the Canadian Offshore Scallop Fishery (COSF) in Canada are located in areas in which both species are likely to be observed
-
-            -   But account for only a small proportion of the high quality habitat in Canada
-
-        -   Models for both species were also relatively successful at capturing the spatial dynamics of the stock up to 3 years into the future.
 
 7.  Few of the static environmental variables were associated with the distribution of either species with only Depth, SST, and Sediment (yellowtail) being consistently significant predictors.
 
@@ -66,8 +59,6 @@ What we've shown with the Closure paper.  I'm also re-running the models again, 
 
 9.  Cod is likely moving outside the core survey domain in the fall and this should be accounted for in the stock assessment for this species.
 
-10. Static closures can be substantially impacted by temporal shifts in species distributions.
+10. Using spatial only models performs as well as using environmental data in terms of prediction for these species. If environmental data aren't available or are expensive to collect, these spatial models on their own seem to have some utility in prediction of species location.
 
-11. Canadian closures are way too small to be effective.
-
-12. Incorporation of these kinds of information into science advice will improve our ability to sustainably manage these stocks.
+11. Incorporation of these kinds of information into science advice will improve our ability to sustainably manage these stocks.
